# sqlite3ext_exif

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  sqlfun_exif.c  sqlfun_exif.h  sqlfun_exif_body.c  sqlfun_exif_body.h  sqlite3ext_exif.c
test/: test001-basic.sh  test001-basic.sql
